--- a/correlations_clean.ipynb
+++ b/correlations_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "id": "afe4cf0d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "id": "153e7944-adbb-401e-914b-09c227dcfdea",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "id": "cbb22f08-505c-4087-af67-84577d421f60",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "id": "4f0fe90c-bf2b-44b3-8798-8aaad0e402f1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "id": "22a8de43-4ff7-4e93-9056-e27ba4a0afef",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1caf6c62-a727-40c5-94a9-5d6dcd535c48",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3b30f85e",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e6020530",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "id": "442d2fdf",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "id": "9b2eae96-cedb-44e6-b9b1-e122bba505bb",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "id": "22989614",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "id": "76acd258",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "id": "ee5c3bc9",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "4      0.236641      0.213542        0.216689        0.276786  0.213542  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 14,
    "id": "0441e374",
    "metadata": {},
    "outputs": [],
@@ -363,12 +363,12 @@
     "    if (denominator == 0) or (numerator == 0):\n",
     "        return 0\n",
     "    \n",
-    "    return numerator / (denominator**0.5)"
+    "    return numerator / np.sqrt(denominator)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 15,
    "id": "be0c2eec",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 16,
    "id": "2235d159",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 17,
    "id": "4a1eae8d",
    "metadata": {},
    "outputs": [],
@@ -432,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 18,
    "id": "afdcff2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 0 = pearson, 1 = spearman\n",
-    "@nb.njit(nb.f4[:,:](nb.f4[:,:], nb.f4[:,:], nb.f4[:,:], nb.f4, nb.int8, nb.f4), cache=True, parallel=True)\n",
-    "def masked_coexpression(x_mat, y_mat, weight, wsum, method, weight_thr):\n",
+    "@nb.njit(nb.f4[:,:](nb.f4[:,:], nb.f4[:,:], nb.f4[:,:], nb.int8, nb.f4), cache=True, parallel=True)\n",
+    "def masked_coexpression(x_mat, y_mat, weight, method, weight_thr):\n",
     "    spot_n = x_mat.shape[0]\n",
     "    xy_n = x_mat.shape[1]\n",
     "    \n",
@@ -448,6 +448,7 @@
     "    for i in nb.prange(spot_n):\n",
     "        w = weight[i, :]\n",
     "        msk = w > weight_thr\n",
+    "        wsum = np.sum(w[msk])\n",
     "        \n",
     "        for j in range(xy_n):\n",
     "            x = x_mat[:, j][msk]\n",
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 19,
    "id": "bbc70571",
    "metadata": {},
    "outputs": [],
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 20,
    "id": "58a369b7",
    "metadata": {},
    "outputs": [
@@ -480,41 +481,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 55.1 s, sys: 17.6 ms, total: 55.1 s\n",
-      "Wall time: 5.56 s\n"
+      "CPU times: user 55.1 s, sys: 112 ms, total: 55.2 s\n",
+      "Wall time: 5.02 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "masked_pc = masked_coexpression(x_mat, y_mat, weight, wsum, method=0, weight_thr=0)"
+    "masked_pc = masked_coexpression(x_mat, y_mat, weight, method=0, weight_thr=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 21,
    "id": "57a67dd2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.09826311,  0.        ,  0.08721767, ...,  0.29930848,\n",
-       "         0.04978303,  0.        ],\n",
-       "       [-0.1635023 ,  0.04346964, -0.33987418, ...,  0.14606072,\n",
-       "        -0.5928406 , -0.32859018],\n",
-       "       [-0.16473134, -0.05994885, -0.3344265 , ..., -0.33696443,\n",
-       "         0.08912473,  0.44609275],\n",
+       "array([[ 0.09826311,  0.        ,  0.13292576, ...,  0.31266147,\n",
+       "         0.07735289,  0.        ],\n",
+       "       [-0.1635023 , -0.08116651, -0.12657948, ...,  0.28430802,\n",
+       "        -0.20094557, -0.00849543],\n",
+       "       [-0.16473134, -0.07541531, -0.260377  , ..., -0.25814563,\n",
+       "         0.10952478,  0.48047918],\n",
        "       ...,\n",
-       "       [-0.12529875, -0.20152366, -0.41333967, ...,  0.12269165,\n",
-       "         0.22780639,  0.11751314],\n",
-       "       [ 0.06025517, -0.14673103,  0.05746137, ..., -0.19184436,\n",
-       "         0.6369634 , -0.0936611 ],\n",
-       "       [ 0.        ,  0.2219938 ,  0.01828931, ...,  0.12309346,\n",
+       "       [-0.12529875, -0.25906146, -0.29997298, ...,  0.18849486,\n",
+       "         0.2728932 ,  0.18209028],\n",
+       "       [ 0.06025517, -0.18633856,  0.23418583, ..., -0.09748655,\n",
+       "         0.65535647, -0.02057623],\n",
+       "       [ 0.        ,  0.19905777,  0.06018526, ...,  0.15469845,\n",
        "         0.        ,  0.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,18 +526,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 22,
    "id": "ce85ba04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([   2,    2,    2, ..., 2687, 2687, 2687]),\n",
-       " array([   5,   11,   17, ..., 1402, 1404, 1405]))"
+       "(array([], dtype=int64), array([], dtype=int64))"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 23,
    "id": "5a653d4e",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        "(2688, 1409)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,17 +568,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 24,
    "id": "61357a1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nan"
+       "array([ 0.13292576, -0.12657948, -0.260377  , -0.13576597, -0.21531531,\n",
+       "        0.06224766, -0.04035276,  0.12259763, -0.20760325, -0.15390356],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,36 +591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "245c0cc9",
+   "execution_count": 29,
+   "id": "cc97ccdf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12891324"
+       "-1.0000001"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "local_pc[5,0:10]"
+    "np.min(masked_pc)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc97ccdf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
    "id": "cf7ff2af",
    "metadata": {},
    "outputs": [],
@@ -630,28 +624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "dbd3aac5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "wcor(x, y, weight[5, :], wsum, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "c686be75",
    "metadata": {},
    "outputs": [],
@@ -668,31 +651,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "id": "00dbac39",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_138597/60933672.py:1: RuntimeWarning: invalid value encountered in double_scalars\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "numerator / (denominator**0.5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2ed44c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -704,28 +677,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "id": "43d70383",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PearsonRResult(statistic=-0.0798658503658069, pvalue=3.391974049134917e-05)"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pearsonr(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "id": "f4621754",
    "metadata": {},
    "outputs": [],
@@ -736,28 +698,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "id": "3cfa6e60",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.0798661932349205"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "wcor(x, y, w, wsum, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "id": "c6b50d29",
    "metadata": {},
    "outputs": [],
@@ -952,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "153e7944-adbb-401e-914b-09c227dcfdea",
    "metadata": {},
    "outputs": [],
@@ -966,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "cbb22f08-505c-4087-af67-84577d421f60",
    "metadata": {},
    "outputs": [],
@@ -976,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "4f0fe90c-bf2b-44b3-8798-8aaad0e402f1",
    "metadata": {},
    "outputs": [],
@@ -987,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "5e601378",
    "metadata": {},
    "outputs": [],
@@ -998,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "d8c4f241",
    "metadata": {},
    "outputs": [],
@@ -1016,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "0e95b8ba",
    "metadata": {},
    "outputs": [],
@@ -1036,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "3573cd36",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "58b651b6",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "297b3e2d",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "b37b960a",
    "metadata": {},
    "outputs": [],
