start object&pipe rework

--- a/spatialDM_reimplement.ipynb
+++ b/spatialDM_reimplement.ipynb
@@ -208,16 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "063e2250-32bb-42a9-a97e-db41a793880c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "?my_sample.weight_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9931cad0-6ac5-463d-849d-b5016729d6a6",
    "metadata": {},
    "outputs": [],
@@ -2785,7 +2775,7 @@
   "kernelspec": {
    "display_name": "liana-py",
    "language": "python",
-   "name": "liana-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2797,7 +2787,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8 (default, Apr 13 2021, 19:58:26) \n[GCC 7.3.0]"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "80a99255e5b17beb6f8c8dc403ec70687184f3f6557a2c5fe71e16aa6505930d"
+   }
   }
  },
  "nbformat": 4,
