--- a/correlations_clean.ipynb
+++ b/correlations_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "afe4cf0d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "153e7944-adbb-401e-914b-09c227dcfdea",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "cbb22f08-505c-4087-af67-84577d421f60",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "4f0fe90c-bf2b-44b3-8798-8aaad0e402f1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "22a8de43-4ff7-4e93-9056-e27ba4a0afef",
    "metadata": {},
    "outputs": [],
@@ -65,13 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "a833a72a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from liana.method.sp._bivariate_coexpression import _masked_coexpressions, _vectorized_correlations, _vectorized_wcosine, _vectorized_jaccard"
+    "from liana.method.sp._bivariate_funs import _masked_coexpressions, _vectorized_correlations, _vectorized_wcosine, _vectorized_jaccard"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "8a5790dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from liana.method.sp._spatialdm import _local_morans, _standardize_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10a244df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -310,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "153e7944-adbb-401e-914b-09c227dcfdea",
    "metadata": {},
    "outputs": [],
@@ -324,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "cbb22f08-505c-4087-af67-84577d421f60",
    "metadata": {},
    "outputs": [],
@@ -334,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4f0fe90c-bf2b-44b3-8798-8aaad0e402f1",
    "metadata": {},
    "outputs": [],
@@ -345,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "5e601378",
    "metadata": {},
    "outputs": [],
@@ -364,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "0e95b8ba",
    "metadata": {},
    "outputs": [],
@@ -377,22 +395,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a833b105",
+   "id": "12525e47",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3573cd36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "58b651b6",
    "metadata": {},
    "outputs": [],
@@ -402,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "297b3e2d",
    "metadata": {},
    "outputs": [],
@@ -412,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "b37b960a",
    "metadata": {},
    "outputs": [],
@@ -422,23 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4b9b22c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1292040e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "49c6a9ce",
    "metadata": {},
    "outputs": [],
@@ -448,43 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c873c9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "local_cos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9999eb86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "local_cos.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a5d4935",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78e9d657",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "3691d7fa",
    "metadata": {},
    "outputs": [],
@@ -495,17 +453,121 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee9e606d",
+   "id": "8aba5c1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77656e41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "1a607463",
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_jc"
+    "ligand_mat = _get_ordered_matrix(temp.X, ligand_pos, lr_res.ligand).T\n",
+    "receptor_mat = _get_ordered_matrix(temp.X, receptor_pos, lr_res.receptor).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "3478efdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if spatial DM: standardize & calculate norm factor\n",
+    "ligand_mat = _standardize_matrix(ligand_mat, local=True)\n",
+    "receptor_mat = _standardize_matrix(receptor_mat, local=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "f7b300cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm_factor = temp.obsm['proximity'].shape[0] / temp.obsm['proximity'].sum()\n",
+    "dist = csr_matrix(norm_factor * temp.obsm['proximity'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "d539cdf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_r = _local_morans(x_mat = ligand_mat, y_mat=receptor_mat, dist=dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "a9362aae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.31601786,  0.09108513,  0.19667045, ...,  0.01102248,\n",
+       "         0.02195861,  0.01416014],\n",
+       "       [-1.41772597,  0.10259609,  0.32585438, ...,  0.00552196,\n",
+       "        -0.02893247, -0.83329622],\n",
+       "       [-1.66266239,  0.52212755,  1.58267848, ...,  0.21773563,\n",
+       "         0.30884862, -1.12790739],\n",
+       "       [ 0.11439858, -0.01571357,  0.04996999, ..., -0.10334864,\n",
+       "        -0.0432732 , -0.00971188]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_r"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d539cdf9",
+   "id": "70c11ead",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb444ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd6ff575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9767868f",
    "metadata": {},
    "outputs": [],
    "source": []
